--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
 	},
 	"require": {
 		"php": ">=7.2",
-		"laminas/laminas-paginator": "^2.8",
-		"laminas/laminas-db": "^2.11",
-        "laminas/laminas-hydrator": "^1.1 || ^2.1 || ^3.0",
+		"laminas/laminas-paginator": ">=2.8",
+		"laminas/laminas-db": ">=2.11",
+        "laminas/laminas-hydrator": "^1.1 || ^2.1 || >=3.0",
         "inanepain/inane": ">=0.20.0"
 	},
 	"autoload": {
