Added custom db adapter

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 	],
 	"homepage": "https://git.inane.co.za:3000/cathedral/db",
     "license": "MIT",
+	"readme": "README.md",
     "_comment": [
 		{
 			"repositories": [
