--- a/composer.json
+++ b/composer.json
@@ -35,13 +35,6 @@
 		"wiki": "https://git.inane.co.za:3000/cathedral/db/wiki",
 		"issues": "https://git.inane.co.za:3000/cathedral/db/issues"
 	},
-	"require": {
-		"php": ">=8.0",
-		"laminas/laminas-paginator": "*",
-		"laminas/laminas-db": "*",
-        "laminas/laminas-hydrator": "*",
-        "inanepain/stdlib": "*"
-	},
 	"autoload": {
 		"psr-4": {
 			"Cathedral\\Db\\": "src/"
@@ -50,5 +43,13 @@
 	"config": {
 		"optimize-autoloader": true,
 		"sort-packages": true
+	},
+	"require": {
+		"php": ">=8.0",
+		"laminas/laminas-paginator": "*",
+		"laminas/laminas-db": "*",
+        "laminas/laminas-hydrator": "*",
+        "inanepain/stdlib": "*",
+        "inanepain/config": "*"
 	}
 }
